--- a/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
@@ -1,16 +1,16 @@
-﻿@model Tabang_Hub.UserAccount
+﻿@*@model Tabang_Hub.UserAccount
 
-@{
-    ViewBag.Title = "Register";
-}
+    @{
+        ViewBag.Title = "Register";
+    }
 
-<h2>Register</h2>
+    <h2>Register</h2>
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+
     <div class="form-horizontal">
         <h4>UserAccount</h4>
         <hr />
@@ -19,7 +19,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @required = true } })
                 @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,7 +27,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", type = "password", @required = true } })
+                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            Confirm Password
+            <div class="col-md-18">
+                <input type="password" class="form-control" name="ConfirmPass" value="" required />
                 @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,12 +46,54 @@
             </div>
         </div>
     </div>
+    }
+
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
+
+@{
+    ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <div class="signupform">
+        <div class="container">
+            <div class="agile_info">
+                <div class="w3l_form">
+                    <div class="left_grid_info">
+                        <img src="~/Content/images/tabanghub3.png" alt="" />
+                    </div>
+                </div>
+                <div class="w3_info">
+                    <h2>Create a New Account</h2>
+                    <p>Fill in the details to create your account.</p>
+                    <form action="#" method="post">
+                        <label>Email Address</label>
+                        <div class="input-group">
+                            <span class="fa fa-envelope" aria-hidden="true"></span>
+                            <input type="email" name="email" placeholder="Enter Your Email" required="">
+                        </div>
+                        <label>Password</label>
+                        <div class="input-group">
+                            <span class="fa fa-lock" aria-hidden="true"></span>
+                            <input type="password" name="password" placeholder="Enter Password" required="">
+                        </div>
+                        <label>Confirm Password</label>
+                        <div class="input-group">
+                            <span class="fa fa-lock" aria-hidden="true"></span>
+                            <input type="password" name="ConfirmPass" placeholder="Confirm Password" required="">
+                        </div>
+                        <button class="btn btn-danger btn-block" type="submit">Register</button>
+                    </form>
+                    <p class="account1">Already have an account? <a href="@Url.Action("Index", "Home")">Login here</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            <p>&copy; 2024 Business login form. All Rights Reserved </p>
+        </div>
+    </div>
