--- a/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Register.cshtml
@@ -1,99 +1,50 @@
-﻿@*@model Tabang_Hub.UserAccount
-
-    @{
-        ViewBag.Title = "Register";
-    }
-
-    <h2>Register</h2>
-
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>UserAccount</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control", @required = true } })
-                @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control", type = "password", @required = true } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            Confirm Password
-            <div class="col-md-18">
-                <input type="password" class="form-control" name="ConfirmPass" value="" required />
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-    }
-
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
+﻿@model Tabang_Hub.UserAccount
 
 @{
     ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <div class="signupform">
-        <div class="container">
-            <div class="agile_info">
-                <div class="w3l_form">
-                    <div class="left_grid_info">
-                        <img src="~/Content/images/tabanghub3.png" alt="" />
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row align-items-center">
+                        <div class="col-md-4 text-center">
+                            <img src="~/Content/images/tabanghub3.png" alt="Tabang Hub Logo" class="img-fluid mb-3" style="max-width: 200px;">
+                        </div>
+                        <div class="col-md-8">
+                            <h2>Create a New Account</h2>
+                            <p>Fill in the details to create your account.</p>
+                            <form action="#" method="post">
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Email Address</label>
+                                    <div class="input-group">
+                                        <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter Your Email" required>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <div class="input-group">
+                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" required>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="confirmPassword" class="form-label">Confirm Password</label>
+                                    <div class="input-group">
+                                        <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                                        <input type="password" class="form-control" id="confirmPassword" name="ConfirmPass" placeholder="Confirm Password" required>
+                                    </div>
+                                </div>
+                                <button class="btn btn-danger w-100" type="submit">Register</button>
+                            </form>
+                            <p class="mt-3 text-center">Already have an account? <a href="~/Page/Login">Login here</a></p>
+                        </div>
                     </div>
-                </div>
-                <div class="w3_info">
-                    <h2>Create a New Account</h2>
-                    <p>Fill in the details to create your account.</p>
-                    <form action="#" method="post">
-                        <label>Email Address</label>
-                        <div class="input-group">
-                            <span class="fa fa-envelope" aria-hidden="true"></span>
-                            <input type="email" name="email" placeholder="Enter Your Email" required="">
-                        </div>
-                        <label>Password</label>
-                        <div class="input-group">
-                            <span class="fa fa-lock" aria-hidden="true"></span>
-                            <input type="password" name="password" placeholder="Enter Password" required="">
-                        </div>
-                        <label>Confirm Password</label>
-                        <div class="input-group">
-                            <span class="fa fa-lock" aria-hidden="true"></span>
-                            <input type="password" name="ConfirmPass" placeholder="Confirm Password" required="">
-                        </div>
-                        <button class="btn btn-danger btn-block" type="submit">Register</button>
-                    </form>
-                    <p class="account1">Already have an account? <a href="@Url.Action("Index", "Home")">Login here</a></p>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            <p>&copy; 2024 Business login form. All Rights Reserved </p>
-        </div>
     </div>
+</div>
