--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <title>Responsive Navbar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="~/Content/Css/Style.css" rel="stylesheet" />
 </head>
 <body>
 
@@ -15,7 +16,7 @@
         <div class="container-xxl">
             <a href="/" class="navbar-brand">
                 <span class="fw-bold text-secondary">
-                    E-Commerce
+                    TabangHub
                 </span>
             </a>
             <!-- toggle button for mobile nav -->
@@ -31,13 +32,13 @@
                         <a href="~/Page/Login" class="nav-link">Login</a>
                     </li>
                     <li class="nav-item d-md-none">
-                        <a href="~/Page/Register" class="nav-link">Register</a>
+                        <a href="~/Page/ChooseRegister" class="nav-link">Register</a>
                     </li>
                     <li class="nav-item d-none d-md-inline me-1">
                         <a href="~/Page/Login" class="btn btn-primary">Login</a>
                     </li>
                     <li class="nav-item d-none d-md-inline">
-                        <a href="~/Page/Register" class="btn btn-primary">Register</a>
+                        <a href="~/Page/ChooseRegister" class="btn btn-primary">Register</a>
                     </li>
                 </ul>
             </div>
@@ -47,5 +48,6 @@
     @RenderBody()
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="~/Content/Js/JavaScript.js"></script>
 </body>
 </html>
