--- a/Tabang-Hub/Tabang-Hub/Views/_ViewStart.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/_ViewStart.cshtml
@@ -1,3 +1,27 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    string layout = "~/Views/Shared/_Layout.cshtml"; // Default layout
+
+    if (User.Identity.IsAuthenticated)
+    {
+        var user = HttpContext.Current.User.Identity.Name;
+        using (var db = new TabangHubEntities())
+        {
+            var roleId = db.vw_UserRoles.Where(m => m.email == user).Select(m => m.roleId).FirstOrDefault();
+            if (roleId != 0)
+            {
+                var roleProvider = new MyRole();
+                string roleName = roleProvider.GetRoleName(roleId);
+                if (roleName == "Organization")
+                {
+                    layout = "~/Views/Shared/_Organization.cshtml";
+                }
+                else if (roleName == "Admin")
+                {
+                    layout = "~/Views/Shared/_AdminLayout.cshtml"; // Assuming you have a layout for admin
+                }
+            }
+        }
+    }
+
+    Layout = layout;
 }
