--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Layout.cshtml
@@ -27,20 +27,35 @@
             </button>
 
             <div class="collapse navbar-collapse justify-content-md-end align-items-start overlay" id="main-nav">
-                <ul class="navbar-nav">
-                    <li class="nav-item d-md-none">
-                        <a href="~/Page/Login" class="nav-link">Login</a>
-                    </li>
-                    <li class="nav-item d-md-none">
-                        <a href="~/Page/ChooseRegister" class="nav-link">Register</a>
-                    </li>
-                    <li class="nav-item d-none d-md-inline me-1">
-                        <a href="~/Page/Login" class="btn btn-primary">Login</a>
-                    </li>
-                    <li class="nav-item d-none d-md-inline">
-                        <a href="~/Page/ChooseRegister" class="btn btn-primary">Register</a>
-                    </li>
-                </ul>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <ul>
+                        <li class="nav-item d-md-none">
+                            <a href="~/Page/Logout" class="nav-link">Logout</a>
+                        </li>
+                        <li class="nav-item d-none d-md-inline">
+                            <a href="~/Page/Logout" class="btn btn-primary">Logout</a>
+                        </li>
+                    </ul>
+                }
+                else
+                {
+                    <ul class="navbar-nav">
+                        <li class="nav-item d-md-none">
+                            <a href="~/Page/Login" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item d-md-none">
+                            <a href="~/Page/ChooseRegister" class="nav-link">Register</a>
+                        </li>
+                        <li class="nav-item d-none d-md-inline me-1">
+                            <a href="~/Page/Login" class="btn btn-primary">Login</a>
+                        </li>
+                        <li class="nav-item d-none d-md-inline">
+                            <a href="~/Page/ChooseRegister" class="btn btn-primary">Register</a>
+                        </li>
+                    </ul>
+                }
+
             </div>
         </div>
     </nav>
