--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -24,16 +24,16 @@
             <div class="collapse navbar-collapse" id="main-nav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a href="~/VolunteerManagement" class="nav-link">Volunteer Management</a>
+                        <a href="~/Organization/VolunteerManagement" class="nav-link">Volunteer Management</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/ProgramsEventsManagement" class="nav-link">Programs/Events Management</a>
+                        <a href="~/Organization/EventsManagement" class="nav-link">Programs/Events Management</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Donations" class="nav-link">Donations</a>
+                        <a href="~/Organization/DonationsManagement" class="nav-link">Donations</a>
                     </li>
                     <li class="nav-item">
-                        <a href="~/Reports" class="nav-link">Reports</a>
+                        <a href="~/Organization/ReportsManagement" class="nav-link">Reports</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
